@@ -14,7 +14,7 @@
 .TP 0.5i
 .B "\\$1 "
 ..
-.TH JOYD 1 "Apr 22 2000" "v0.2.0"
+.TH JOYD 1 "May 25 2000" "v0.2.1"
 .SH NAME
 .B joyd
 \- a joystick daemon
