@@ -14,7 +14,7 @@
 .TP 0.5i
 .B "\\$1 "
 ..
-.TH JOYDRC 5 "Apr 22 2000" "v0.2.0"
+.TH JOYDRC 5 "May 25 2000" "v0.2.1"
 .SH NAME
 .B joydrc
 \- configuration file for the joystick daemon
