@@ -1,7 +1,7 @@
 /* joystick.h
  *
  * part of
- * joyd 0.2.0 2000-04-22
+ * joyd 0.2.1 2000-05-25
  *
  */
 
